--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
 
   web:
     build: .
-    command: gunicorn myproject.wsgi:application --bind 0.0.0.0:8000
+    command: gunicorn cyber_security.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - .:/app
     ports:
